[gd_scene load_steps=16 format=3 uid="uid://b8fie0djguxkq"]

[ext_resource type="Script" path="res://Scripts/map_selection.gd" id="1_mfqu3"]
[ext_resource type="Texture2D" uid="uid://qo1t1jb0qy8h" path="res://Assets/MapSelection/StageSelect.png" id="2_bfqkr"]
[ext_resource type="AudioStream" uid="uid://d1qog63fe1ost" path="res://Assets/Sounds/Music/MainMenu.wav" id="6_dyjyu"]
[ext_resource type="PackedScene" uid="uid://x8nor6ap8ehe" path="res://Scenes/UI2.tscn" id="6_w8m5a"]
[ext_resource type="PackedScene" uid="uid://bpes336tjcvly" path="res://Scenes/PauseMenu.tscn" id="7_kwubm"]
[ext_resource type="Texture2D" uid="uid://b51uvoa8hi3tc" path="res://Assets/MapSelection/Curtains.png" id="7_xvpvg"]
[ext_resource type="Texture2D" uid="uid://b184saviinvvu" path="res://Assets/MapSelection/Tv.png" id="8_0k75w"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_rhefw"]
load_path = "res://.godot/imported/Cavemap_Preview.png-212dfb65d7a4c73e2f9191b6cb761b02.ctex"

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hyogj"]
size = Vector2(109, 100)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bqatk"]
size = Vector2(222, 101)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_a65ya"]
size = Vector2(206, 38.25)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_v11cg"]
size = Vector2(256.5, 61)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_svbbg"]
size = Vector2(214, 37)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_slvwl"]
size = Vector2(253.5, 69)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7jjvh"]
size = Vector2(1930, 143)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lbnso"]
size = Vector2(62, 1104)

[node name="MapSelection" type="Node2D"]
script = ExtResource("1_mfqu3")

[node name="StageSelect" type="Sprite2D" parent="."]
z_index = -3
position = Vector2(960, 540)
texture = ExtResource("2_bfqkr")

[node name="Television" type="StaticBody2D" parent="."]
z_index = -2
position = Vector2(666, 180)

[node name="Television_Sprite" type="Sprite2D" parent="Television"]
position = Vector2(269.335, 297.49)
scale = Vector2(1.24924, 1.02379)
texture = SubResource("CompressedTexture2D_rhefw")

[node name="Select_Button" type="StaticBody2D" parent="."]
position = Vector2(16, -182)

[node name="SelectButton_Area" type="Area2D" parent="Select_Button"]
position = Vector2(662, 739)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Select_Button/SelectButton_Area"]
z_index = 1
position = Vector2(329.5, 152)
shape = SubResource("RectangleShape2D_hyogj")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Select_Button"]
z_index = 1
position = Vector2(983, 917.5)
shape = SubResource("RectangleShape2D_bqatk")

[node name="Left_Button" type="StaticBody2D" parent="."]
position = Vector2(-199, -118)

[node name="LeftButton_Area" type="Area2D" parent="Left_Button"]
position = Vector2(662, 739)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Left_Button/LeftButton_Area"]
position = Vector2(313, 173.875)
shape = SubResource("RectangleShape2D_a65ya")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Left_Button"]
position = Vector2(976.75, 945.5)
shape = SubResource("RectangleShape2D_v11cg")

[node name="Right_Button" type="StaticBody2D" parent="."]
position = Vector2(239, -118)

[node name="RightButton_Area" type="Area2D" parent="Right_Button"]
position = Vector2(662, 739)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Right_Button/RightButton_Area"]
position = Vector2(320, 179.5)
shape = SubResource("RectangleShape2D_svbbg")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Right_Button"]
position = Vector2(986.25, 950.5)
shape = SubResource("RectangleShape2D_slvwl")

[node name="Floor" type="StaticBody2D" parent="."]
position = Vector2(403, 861)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Floor"]
position = Vector2(550, 173.5)
shape = SubResource("RectangleShape2D_7jjvh")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Floor"]
position = Vector2(-429, -314)
shape = SubResource("RectangleShape2D_lbnso")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Floor"]
position = Vector2(1543, -308)
shape = SubResource("RectangleShape2D_lbnso")

[node name="Curtains" type="Sprite2D" parent="."]
z_index = 2
position = Vector2(960, 540)
texture = ExtResource("7_xvpvg")

[node name="Tv" type="Sprite2D" parent="."]
z_index = -2
position = Vector2(935, 531)
texture = ExtResource("8_0k75w")

[node name="MapSelectionMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_dyjyu")
volume_db = -8.602

[node name="Ui" parent="." instance=ExtResource("6_w8m5a")]
z_index = 3
position = Vector2(0, 2)

[node name="PauseMenu" parent="." instance=ExtResource("7_kwubm")]
z_index = 2
position = Vector2(-52, -12)

[connection signal="body_entered" from="Select_Button/SelectButton_Area" to="." method="_on_select_button_area_body_entered"]
[connection signal="body_entered" from="Left_Button/LeftButton_Area" to="." method="_on_left_button_area_body_entered"]
[connection signal="body_entered" from="Right_Button/RightButton_Area" to="." method="_on_right_button_area_body_entered"]
